# FAT32-Reader

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  compile_commands.json  file.c  main.c  read.c  run.sh
.github/workflows/: cmake.yml
cmake/: FindCheck.cmake
doc/: report.md  实验报告.md
include/: fat.h  file.h  interact.h  io.h
src/: CMakeLists.txt  fat.c  interact.c  io.c  main.c
tests/: .gitattributes  CMakeLists.txt  a.img  fat_test.c
